modules/gdscript/tests/scripts/analyzer/errors/rect2i_index_int.gd
func test():
	var r: Rect2i = Rect2i()
	print(r[0])
